# gdb-cli

./: .gitignore  CHANGELOG.md  ISSUES.md  README.de.md  README.es.md  README.fr.md  README.it.md  README.ja.md  README.ko.md  README.md  README.pt.md  README.ru.md  README.tr.md  README.vi.md  README.zh-CN.md  pyproject.toml
.omc/: project-memory.json
.omc/plans/: 2026-04-04-multilanguage-support-implementation.md
.omc/sessions/: 05acad2e-bb6c-43ab-b225-987a7860868c.json  2b1c9e2e-18cc-475d-8c9f-b65ac98b2566.json  5ccfa561-39cf-45d2-86a9-28fc10a1e7ad.json  635bd2c5-1576-4b05-a272-be6553cab545.json  65d6b600-7c1a-455f-bc36-5470b4ba4515.json  95e25709-d9d8-4c20-8218-c1628b97fb6c.json  b3280475-472d-424c-a930-b7885c96e285.json  bf0906e1-593c-4d18-af9a-d6505547e069.json  fbee4796-408c-456a-9433-ca6d2e315014.json
.omc/state/: hud-state.json  hud-stdin-cache.json  mission-state.json  setup-state.json
.playwright-cli/: page-2026-03-21T15-42-44-113Z.yml  page-2026-03-21T16-31-55-042Z.yml  page-2026-03-21T17-06-48-359Z.yml  page-2026-03-21T17-08-50-797Z.yml
mydocs/specs/: 2026-03-19_17-30_GDB-CLI-for-AI.md  2026-03-19_21-00_E2E-Testing-Team.md  2026-03-20_16-00_Eliminate-gdb-execute.md  2026-03-23_status-elapsed-time-design.md  2026-03-24_session-metadata-and-gdb-path.md  2026-03-26_ob-core-debugging-skill-design.md
skills/: README.md
skills/gdb-cli/: SKILL.md
skills/gdb-debug/: SKILL.md
src/gdb_cli/: __init__.py  cli.py  client.py  env_check.py  errors.py  formatters.py  i18n.py  launcher.py  (+3 more)
tests/: __init__.py  conftest.py  helpers.py  test_async_load.py  test_cli_async.py  test_client.py  test_e2e_core_analysis.py  test_e2e_memory.py  test_e2e_multithread.py  test_env_check.py  test_format_elapsed.py  test_formatters.py  test_handlers.py  test_i18n.py  test_safety.py  test_session.py
(+22 files in other folders)
