[build-system]
requires = ["setuptools>=40.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gdb-cli"
version = "0.1.0"
description = "GDB CLI for AI - 瘦客户端 CLI + GDB 内置 Python RPC Server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.6.8"
authors = [
    {name = "GDB CLI Team"}
]
keywords = ["gdb", "debug", "cli", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "click>=7.0",
    "dataclasses>=0.6;python_version<'3.7'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[project.scripts]
gdb-cli = "gdb_cli.cli:main"

[project.urls]
Homepage = "https://github.com/yourusername/gdb-debug-cli"
Repository = "https://github.com/yourusername/gdb-debug-cli"
Issues = "https://github.com/yourusername/gdb-debug-cli/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
gdb_cli = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["src/gdb_cli"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]